# fold_left_co_uk

./: .gitignore  README.md  dune-project  fold_left_co_uk.opam  fold_left_dev.opam  game_goblin.opam  lb_portfolio.opam  package.json  reset_sqlite_db.sh
common/: Types.re
db/: db_schema.sql  db_seed.sql
public/: index.html
radix_binding/: Themes.re  dune
server/: Encoders.re  Server.re  Server_example.re  Tables.re  Wasm_App.re  dune
src/: CopyWriter.re  DemoAppRest.re  Demo_App.re  Entry.re  GamesList.re  LandingPage.re  Nav.re  NotFound.re  ProjectRest.re  ProjectsList.re  Router.re  ShowGame.re  Technologies.re  WFrame.re  Wasm_App.re  dune
src/api/: DemoAppRest.re  ProjectRest.re  dune
src/bindings/radix/theme/: RadixUI.re
src/components/: BackButton.re  Conclusion.re  CopyWriter.re  DarkThemeSwitch.re  ErrorMessage.re  IFrame.re  LandingPage.re  NotFound.re  ProjectsList.re  ProjectsListItem.re  Router.re  ShowGame.re  Technologies.re  Util.re  dune
src/scss/: _nav.scss  _page.scss  _vars.scss  main.scss
