(lang dune 3.8)

(using melange 0.1)

(name game_goblin)

(license "MIT")

(maintainers lboyle@protonmail.com)

(authors lboyle@protonmail.com)

(homepage https://github.com/LBoyle)

(bug_reports https://github.com/LBoyle)

(package
 (allow_empty)
 (name game_goblin)
 (synopsis "GameGoblin")
 (description "A website to show off my WebAssembly games"))
