(lang dune 3.8)

(using melange 0.1)

(name fold_left_dev)

(license "MIT")

(maintainers lboyle@protonmail.com)

(authors lboyle@protonmail.com)

(homepage https://github.com/FoldLeft-lsb)

(bug_reports https://github.com/FoldLeft-lsb)

(package
 (allow_empty)
 (name fold_left_dev)
 (synopsis "FoldLeft.dev")
 (description "A portfolio website to show off my WebAssembly games"))
