(lang dune 3.8)

(using melange 0.1)

(name fold_left_co_uk)

(license "MIT")

(maintainers lboyle@protonmail.com)

(authors lboyle@protonmail.com)

(homepage https://github.com/FoldLeft-lsb/fold_left_co_uk)

(bug_reports https://github.com/FoldLeft-lsb/fold_left_co_uk/issues)

(package
 (allow_empty)
 (name fold_left_co_uk)
 (synopsis "FoldLeft.co.uk")
 (description "A website to show off my toy projects"))
