opam-version: "2.0"
synopsis: "FoldLeft.co.uk"
description: "A website to show off my toy projects"
maintainer: ["lboyle@protonmail.com"]
authors: ["lboyle@protonmail.com"]
license: "MIT"
homepage: "https://github.com/FoldLeft-lsb"
bug-reports: "https://github.com/FoldLeft-lsb"
depends: [
  "ocaml"
  "reason" {>= "3.10.0"}
  "dune" {>= "3.9"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} 
  "ocaml-lsp-server" {with-test} 
  "dot-merlin-reader" {with-test} 
  "odoc" {with-doc}
  "ocamlformat"
  "dream" {>= "1.0.0~alpha5"}
  "caqti-driver-sqlite3" {>= "1.9.0"}
  "melange-json"
  "melange-fetch"
]
# dev-repo: "git+https://github.com/your/project.git"