opam-version: "2.0"
synopsis: "GameGoblin"
description: "A website to show off my WebAssembly games"
maintainer: ["lboyle@protonmail.com"]
authors: ["lboyle@protonmail.com"]
license: "MIT"
homepage: "https://github.com/LBoyle"
bug-reports: "https://github.com/LBoyle"
depends: [
  "ocaml"
  "reason" {>= "3.10.0"}
  "dune" {>= "3.9"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
  "ocamlformat"
  "dream" {>= "1.0.0~alpha5"}
  "tyxml"
  "caqti-driver-sqlite3" {>= "1.9.0"}
]
dev-repo: "git+https://github.com/your/project.git"